--- a/index.html
+++ b/index.html
@@ -38,9 +38,20 @@
 
     <!-- Hero Section -->
 
-    <section class="bg-dark text-light p-5 text-center">
+    <section class="bg-dark text-light p-5 text-center text-sm-start">
         <div class="container">
-            
+            <div class="d-sm-flex">
+                <div>
+                    <h1>Become a <span class="text-warning" >Web Developer</span></h1>
+                    <p class="lead my-4">
+                        We focus on teaching our students the fundamentals of the latest
+                        and greatest technologies to prepare them for their first dev role
+                    </p>
+
+                    <button class="btn btn-primary btn-lg">Start The Enrollment</button>
+                </div>
+                <img class="img-fluid w-50" src="img/showcase.svg" alt=""/>
+            </div>
         </div>
     </section>
 
