--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <title>Frontend Bootcamp</title>
 </head>
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-        <div class="container">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark ">
+        <div class="container py-3">
             <a class="navbar-brand" href="#">Frontend Bootcamp</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,11 +39,11 @@
 
     <!-- Hero Section -->
 
-    <section class="bg-dark text-light p-5 text-center text-sm-start">
+    <section class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
         <div class="container">
-            <div class="d-sm-flex">
+            <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
-                    <h1>Become a <span class="text-warning" >Web Developer</span></h1>
+                    <h1>Become a <span class="text-warning">Web Developer</span></h1>
                     <p class="lead my-4">
                         We focus on teaching our students the fundamentals of the latest
                         and greatest technologies to prepare them for their first dev role
@@ -50,12 +51,138 @@
 
                     <button class="btn btn-primary btn-lg">Start The Enrollment</button>
                 </div>
-                <img class="img-fluid w-50" src="img/showcase.svg" alt=""/>
+                <img class="img-fluid w-50 d-none d-sm-block" src="./img/showcase.svg" alt="" />
             </div>
         </div>
     </section>
 
     <!-- Hero Section end -->
+
+    <!-- Newsletter -->
+
+    <section class="bg-primary text-light p-5">
+        <div class="container">
+            <div class="d-md-flex justify-content-between align-items-center">
+                <h3 class="md-3 mb-md-0">Sign Up For Our Newsletter</h3>
+                <div class="input-group news-input">
+                    <input type="text" class="form-control" placeholder="Enter Email">
+
+                    <button class="btn btn-dark btn-lg" type="button" id="button-addon2">
+                        Button</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Newsletter end -->
+
+    <!-- Boxes -->
+
+    <section class="p-5">
+        <div class="container">
+            <div class="row text-center g-4">
+                <div class="col-md">
+
+                    <div class="card bg-dark text-light">
+                        <div class="card-body text-center">
+
+                            <div class="h1 mb-3">
+                                <i class="bi bi-laptop"></i>
+                            </div>
+                            <h3 class="card-title mb-3">Virtual</h3>
+                            <p class="card-text">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate cum cumque, nobis
+                                dolore quaerat culpa.
+                            </p>
+                            <a href="#" class="btn btn-primary">Read more</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card bg-dark text-light">
+                        <div class="card-body text-center">
+                            <div class="h1 mb-3">
+                                <i class="bi bi-person-square"></i>
+                            </div>
+                            <h3 class="card-title mb-3">Hybrid</h3>
+                            <p class="card-text">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate cum cumque, nobis
+                                dolore quaerat culpa.
+                            </p>
+                            <a href="#" class="btn btn-primary">Read more</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card bg-dark text-light">
+                        <div class="card-body text-center">
+                            <div class="h1 mb-3">
+                                <i class="bi bi-people"></i>
+                            </div>
+                            <h3 class="card-title mb-3">In Person</h3>
+                            <p class="card-text">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate cum cumque, nobis
+                                dolore quaerat culpa.
+                            </p>
+                            <a href="#" class="btn btn-primary">Read more</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Boxes end-->
+
+    <!-- Learn Section -->
+
+    <section id="learn" class="p-5">
+        <div class="container">
+            <div class="row align-items-center justify-content-between">
+                <div class="col-md">
+                    <img src="img/fundamentals.svg" class="img-fluid" alt="">
+                </div>
+                <div class="col-md p-5">
+                    <h2>Learn The Fundementals</h2>
+                    <p class="lead">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum animi nihil ad eaque!
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis porro repellat accusamus, itaque dolorem suscipit!</p>
+                    <a href="#" class="btn btn-light mt-3">
+                        <i class="bi bi-chevron-right"></i> Read More
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Learn Section end -->
+
+    <!-- React -->
+    <section id="learn" class="p-5 bg-dark text-light">
+        <div class="container">
+            <div class="row align-items-center justify-content-between">
+                <div class="col-md p-5">
+                    <h2>Learn React</h2>
+                    <p class="lead">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum animi nihil ad eaque!
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis porro repellat accusamus, itaque dolorem suscipit!</p>
+                    <a href="#" class="btn btn-light mt-3">
+                        <i class="bi bi-chevron-right"></i> Read More
+                    </a>
+                </div>
+                <div class="col-md">
+                    <img src="img/react.svg" class="img-fluid" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- React end -->
+
+    <!-- Question Accordion -->
+    
+    <!-- Question Accordion end -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
