--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css" rel="stylesheet" />
     <title>Frontend Bootcamp</title>
 </head>
 
@@ -309,9 +310,11 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="card bg-light">
                         <div class="card-body text-center">
-                            <img src="https://randomuser.me/api/portraits/men/11.jpg" class="rounded-circle mb-3" alt="">
+                            <img src="https://randomuser.me/api/portraits/men/11.jpg" class="rounded-circle mb-3"
+                                alt="">
                             <h3 class="card-title mb-3">John Doe</h3>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, voluptatum iure laborum vel dolores velit?</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Reprehenderit, voluptatum iure laborum vel dolores velit?</p>
                             <a href=""><i class="bi bi-twitter text-dark mx-1"></i></a>
                             <a href=""><i class="bi bi-facebook text-dark mx-1"></i></a>
                             <a href=""><i class="bi bi-linkedin text-dark mx-1"></i></a>
@@ -322,9 +325,11 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="card bg-light">
                         <div class="card-body text-center">
-                            <img src="https://randomuser.me/api/portraits/women/11.jpg" class="rounded-circle mb-3" alt="">
+                            <img src="https://randomuser.me/api/portraits/women/11.jpg" class="rounded-circle mb-3"
+                                alt="">
                             <h3 class="card-title mb-3">Jane Doe</h3>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, voluptatum iure laborum vel dolores velit?</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Reprehenderit, voluptatum iure laborum vel dolores velit?</p>
                             <a href=""><i class="bi bi-twitter text-dark mx-1"></i></a>
                             <a href=""><i class="bi bi-facebook text-dark mx-1"></i></a>
                             <a href=""><i class="bi bi-linkedin text-dark mx-1"></i></a>
@@ -335,9 +340,11 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="card bg-light">
                         <div class="card-body text-center">
-                            <img src="https://randomuser.me/api/portraits/men/12.jpg" class="rounded-circle mb-3" alt="">
+                            <img src="https://randomuser.me/api/portraits/men/12.jpg" class="rounded-circle mb-3"
+                                alt="">
                             <h3 class="card-title mb-3">John Smith</h3>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, voluptatum iure laborum vel dolores velit?</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Reprehenderit, voluptatum iure laborum vel dolores velit?</p>
                             <a href=""><i class="bi bi-twitter text-dark mx-1"></i></a>
                             <a href=""><i class="bi bi-facebook text-dark mx-1"></i></a>
                             <a href=""><i class="bi bi-linkedin text-dark mx-1"></i></a>
@@ -348,9 +355,11 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="card bg-light">
                         <div class="card-body text-center">
-                            <img src="https://randomuser.me/api/portraits/women/1.jpg" class="rounded-circle mb-3" alt="">
+                            <img src="https://randomuser.me/api/portraits/women/1.jpg" class="rounded-circle mb-3"
+                                alt="">
                             <h3 class="card-title mb-3">Sarah Joe</h3>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, voluptatum iure laborum vel dolores velit?</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Reprehenderit, voluptatum iure laborum vel dolores velit?</p>
                             <a href=""><i class="bi bi-twitter text-dark mx-1"></i></a>
                             <a href=""><i class="bi bi-facebook text-dark mx-1"></i></a>
                             <a href=""><i class="bi bi-linkedin text-dark mx-1"></i></a>
@@ -367,15 +376,62 @@
     <!-- Contact & Map -->
 
     <div class="section p-5">
-        
+        <div class="container">
+            <div class="row g-4">
+                <div class="col-md">
+                    <h2 class="text-center mb-4">
+                        Contact Info
+                    </h2>
+                    <ul class="list-grooup list-group-flush lead">
+                        <li class="list-group-item">
+                            <span class="fw-bold">Main Location:</span> 50 Main Street
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Enrollment Phone:</span> +91 12345 67890
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Student Phone:</span> +91 12345 67890
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Enrollment Email:</span> enrollment@info.test
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Student Email:</span> student@info.test
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Contact & Map end -->
+
+    <!-- Footer -->
+    <footer class="p-5 bg-dark text-white text-center position-relative">
+        <div class="container">
+            <p class="lead">Copuright &copy; 2021 Frontend Bootcamp</p>
+            <a href="#" class="position-absolute bottom-0 end-0 p-5">
+                <i class="bi bi-arrow-up-circle h1"></i>
+            </a>
+        </div>
+    </footer>
+    <!-- Footer end -->
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js"></script>
+    <script>
+        mapboxgl.accessToken =
+            'pk.eyJ1IjoiYnRyYXZlcnN5IiwiYSI6ImNrbmh0dXF1NzBtbnMyb3MzcTBpaG10eXcifQ.h5ZyYCglnMdOLAGGiL1Auw'
+        var map = new mapboxgl.Map({
+            container: 'map',
+            style: 'mapbox://styles/mapbox/streets-v11',
+            center: [-71.060982, 42.35725],
+            zoom: 18,
+        })
+    </script>
 </body>
 </body>
 
