--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                         and greatest technologies to prepare them for their first dev role
                     </p>
 
-                    <button class="btn btn-primary btn-lg">Start The Enrollment</button>
+                    <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#enroll">Start The
+                        Enrollment</button>
                 </div>
                 <img class="img-fluid w-50 d-none d-sm-block" src="./img/showcase.svg" alt="" />
             </div>
@@ -416,6 +417,43 @@
         </div>
     </footer>
     <!-- Footer end -->
+
+    <!-- Modal -->
+    <div class="modal fade" id="enroll" tabindex="-1" aria-labelledby="enrollLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="enrollLabel">Modal title</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p class="lead">Fill out this form</p>                
+                    <form action="">
+                        <div class="mb-3">
+                            <label for="first-name" class="col-form-label">First Name : </label>
+                            <input type="text" class="form-control" id="first-name">
+                        </div>
+                        <div class="mb-3">
+                            <label for="last-name" class="col-form-label">Last Name : </label>
+                            <input type="text" class="form-control" id="last-name">
+                        </div>
+                        <div class="mb-3">
+                            <label for="Email" class="col-form-label">Email : </label>
+                            <input type="text" class="form-control" id="Email">
+                        </div>
+                        <div class="mb-3">
+                            <label for="Phone" class="col-form-label">Phone : </label>
+                            <input type="text" class="form-control" id="Phone">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Submit</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
